--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,10 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE124</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
     </dependencies>
 </project>
